2003-02-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* error.cc (reset_error_handler): New function.
	* toplev.cc (main_loop): Use it here.
	* lex.l (reset_parser): Don't set error_state and warning_state here.
	* parse.y (eval_string): Reset parser before calling yyparse.

2003-01-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (Ffmod): New function.

	* c-file-ptr-stream.cc (c_file_ptr_buf::underflow_common): New
	function.
	* c-file-ptr-stream.h (c_file_ptr_buf::underflow,
	c_file_ptr_buf::uflow): Use it.
	(c_file_ptr_buf): Derive from std::streambuf, not OCTAVE_STD_FILEBUF.
	Don't cache file descriptor.

2003-01-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/minmax.cc: Move min and max functions from here to
	liboctave/dMatrix.cc and liboctave/CMatrix.cc.

2003-01-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/rand.cc: Rewrite to use new octave_rand functions.

2003-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.cc (octave_base_stream::do_printf): Handle values
	outside the range of integers in int conversions for
	compatibilitiy wtih Matlab.

2003-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (get_mat_data_input_line): Handle lines with CR
	only as separator.

	* oct-stream.cc (octave_base_stream::do_printf): Handle Inf and
	NaN in int conversions for compatibility with Matlab.

	* data.cc (symbols_of_data): Doc fix for realmin.

	* cutils.c (octave_raw_vsnprintf): New function.
	* utils.cc (octave_snprintf): Move here from cutils.c.
	(octave_Vsnprintf): Likewise.  Allow octave_raw_vsnprintf to be
	interrupted.
	* utils.h (octave_vsnprintf, octave_snprintf): No longer extern "C".

2003-01-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-loop.cc (tree_complex_for_command::eval): Fix typo.

2003-01-16  Mumit Khan  <khan@nanotech.wisc.edu>

	* mk-oct-links: Use $SED if set.
	* mkbuiltins: Likewise.
	* mkdefs: Likewise.
	* mkdocs: Likewise.
	* mkgendoc: Likewise.
	* mkops: Likewise.
